tests/valid/variables/refer.rs
/*
return: 2
*/

main(): int {
    a: int = 2;
    return a;
}