tests/invalid/variables/undeclared_var.rs
/*
fail: 1
*/

main(): int {
    return a;
}